export const snapshot = {};

snapshot[`/components-example-button--basic-button 1`] = `
\`<!DOCTYPE html>
<html lang="en">
    
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Components Example Button(basic button)</title>
        <script type="module" async>
            import "/.workshop/example-button.island.js"; import "/.workshop/example-button.stories.js"; import "/.workshop/example-field.island.js"; import "/.workshop/example-field.stories.js"; import "/.workshop/fixture.island.js";
        </script>
    </head>
    
    <body>
        <plaited-workshop-fixture>
            <template shadowroot="open">
                <style></style>
                <button type="submit">basic</button>
            </template>
        </plaited-workshop-fixture>
        <script type="text/javascript">
            const source = new EventSource('/livereload'); const reload = () =>location.reload(true); source.onmessage = reload; source.onerror = () =>(source.onopen = reload); console.log('[plaited] listening for file changes');
        </script>
    </body>

</html>\`
`;

snapshot[`/components-example-field--field-basic 1`] = `
\`<!DOCTYPE html>
<html lang="en">
    
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Components Example Field(field basic)</title>
        <script type="module" async>
            import "/.workshop/example-button.island.js"; import "/.workshop/example-button.stories.js"; import "/.workshop/example-field.island.js"; import "/.workshop/example-field.stories.js"; import "/.workshop/fixture.island.js";
        </script>
    </head>
    
    <body>
        <plaited-workshop-fixture>
            <template shadowroot="open">
                <style></style>
                <input type='text' value="100" id="input" min="10" max="100" ref={ref}
                />
            </template>
        </plaited-workshop-fixture>
        <script type="text/javascript">
            const source = new EventSource('/livereload'); const reload = () =>location.reload(true); source.onmessage = reload; source.onerror = () =>(source.onopen = reload); console.log('[plaited] listening for file changes');
        </script>
    </body>

</html>\`
`;
